# superpro

./: index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  Editor.tsx  Store.ts  db.ts
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-08-06-134735_project/: down.sql  up.sql
src-tauri/src/: database.rs  db.rs  main.rs  menu.rs  models.rs  schema.rs
src-tauri/src/database/: mod.rs  queries.rs  setup.rs
src-tauri/src/database/initializatoin/: dp_setup.rs
src-tauri/src/ops/: project_ops.rs
src/components/: newProjectDialog.tsx  posts.tsx  save.tsx  theme-provider.tsx
src/database/: DBingredients.ts  listeners.ts
src/model/: Post.ts  migrations.ts  schema.ts
src/types/: Ingredients.ts
src/utils/: fileSystem.ts
